--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 	<head>
 		<title>Projeto Exemplo</title>
 		<meta charset='UTF-8'>
+		<link rel="stylesheet" type="text/css" href="./css/estilo.css">
 	</head>
 	<body>
 		<h1>Meu projeto exemplo</h1>
+		<h2 class="subtitulo">Exemplo</h2>
 	</body>
 </html>
